--- a/leaderboard_1.0/tests/test-carla-benchmark-job.yaml
+++ b/leaderboard_1.0/tests/test-carla-benchmark-job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: submission-parallel
 spec:
+  backoffLimit: 8
+  ttlSecondsAfterFinished: 10
   template:
     spec:
       serviceAccountName: submission-worker
@@ -43,12 +45,6 @@ spec:
           env:
             - name: CARLA_PORT
               value: "2000"
-            - name: OMP_PROC_BIND
-              value: "FALSE"
-            - name: OMP_NUM_THREADS
-              value: "64"
-            - name: SDL_VIDEODRIVER
-              value: "offscreen"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "0"
           volumeMounts:
@@ -69,19 +65,6 @@ spec:
           args:
             - |
               bash /workspace/leaderboard/run_leaderboard.sh
-          volumeMounts:
-            - mountPath: /workspace/leaderboard
-              name: leaderboard
-            - mountPath: /workspace/scenario_runner
-              name: scenario-runner
-            - mountPath: /workspace/CARLA
-              name: carla-python-api
-            - mountPath: /tmp/agent
-              name: logs
-              subPath: agent1
-            - mountPath: /tmp/status
-              name: logs
-              subPath: containers-status
           env:
             - name: CARLA_PORT
               value: "2000"
@@ -101,6 +84,19 @@ spec:
               value: "all"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "0"
+          volumeMounts:
+            - mountPath: /workspace/leaderboard
+              name: leaderboard
+            - mountPath: /workspace/scenario_runner
+              name: scenario-runner
+            - mountPath: /workspace/CARLA
+              name: carla-python-api
+            - mountPath: /tmp/agent
+              name: logs
+              subPath: agent1
+            - mountPath: /tmp/status
+              name: logs
+              subPath: containers-status
 
         # Second set of simulator + agent
         - name: simulator-2
@@ -112,12 +108,6 @@ spec:
           env:
             - name: CARLA_PORT
               value: "2100"
-            - name: OMP_PROC_BIND
-              value: "FALSE"
-            - name: OMP_NUM_THREADS
-              value: "64"
-            - name: SDL_VIDEODRIVER
-              value: "offscreen"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "1"
           volumeMounts:
@@ -138,19 +128,6 @@ spec:
           args:
             - |
               bash /workspace/leaderboard/run_leaderboard.sh
-          volumeMounts:
-            - mountPath: /workspace/leaderboard
-              name: leaderboard
-            - mountPath: /workspace/scenario_runner
-              name: scenario-runner
-            - mountPath: /workspace/CARLA
-              name: carla-python-api
-            - mountPath: /tmp/agent
-              name: logs
-              subPath: agent2
-            - mountPath: /tmp/status
-              name: logs
-              subPath: containers-status
           env:
             - name: CARLA_PORT
               value: "2100"
@@ -170,6 +147,19 @@ spec:
               value: "all"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "1"
+          volumeMounts:
+            - mountPath: /workspace/leaderboard
+              name: leaderboard
+            - mountPath: /workspace/scenario_runner
+              name: scenario-runner
+            - mountPath: /workspace/CARLA
+              name: carla-python-api
+            - mountPath: /tmp/agent
+              name: logs
+              subPath: agent2
+            - mountPath: /tmp/status
+              name: logs
+              subPath: containers-status
 
         # Third set of simulator + agent
         - name: simulator-3
@@ -181,12 +171,6 @@ spec:
           env:
             - name: CARLA_PORT
               value: "2200"
-            - name: OMP_PROC_BIND
-              value: "FALSE"
-            - name: OMP_NUM_THREADS
-              value: "64"
-            - name: SDL_VIDEODRIVER
-              value: "offscreen"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "2"
           volumeMounts:
@@ -207,19 +191,6 @@ spec:
           args:
             - |
               bash /workspace/leaderboard/run_leaderboard.sh
-          volumeMounts:
-            - mountPath: /workspace/leaderboard
-              name: leaderboard
-            - mountPath: /workspace/scenario_runner
-              name: scenario-runner
-            - mountPath: /workspace/CARLA
-              name: carla-python-api
-            - mountPath: /tmp/agent
-              name: logs
-              subPath: agent3
-            - mountPath: /tmp/status
-              name: logs
-              subPath: containers-status
           env:
             - name: CARLA_PORT
               value: "2200"
@@ -239,6 +210,19 @@ spec:
               value: "all"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "2"
+          volumeMounts:
+            - mountPath: /workspace/leaderboard
+              name: leaderboard
+            - mountPath: /workspace/scenario_runner
+              name: scenario-runner
+            - mountPath: /workspace/CARLA
+              name: carla-python-api
+            - mountPath: /tmp/agent
+              name: logs
+              subPath: agent3
+            - mountPath: /tmp/status
+              name: logs
+              subPath: containers-status
 
         # Four set of simulator + agent
         - name: simulator-4
@@ -250,12 +234,6 @@ spec:
           env:
             - name: CARLA_PORT
               value: "2300"
-            - name: OMP_PROC_BIND
-              value: "FALSE"
-            - name: OMP_NUM_THREADS
-              value: "64"
-            - name: SDL_VIDEODRIVER
-              value: "offscreen"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "3"
           volumeMounts:
@@ -276,19 +254,6 @@ spec:
           args: 
             - |
               bash /workspace/leaderboard/run_leaderboard.sh
-          volumeMounts:
-            - mountPath: /workspace/leaderboard
-              name: leaderboard
-            - mountPath: /workspace/scenario_runner
-              name: scenario-runner
-            - mountPath: /workspace/CARLA
-              name: carla-python-api
-            - mountPath: /tmp/agent
-              name: logs
-              subPath: agent4
-            - mountPath: /tmp/status
-              name: logs
-              subPath: containers-status
           env:
             - name: CARLA_PORT
               value: "2300"
@@ -308,6 +273,19 @@ spec:
               value: "all"
             - name: NVIDIA_VISIBLE_DEVICES
               value: "3"
+          volumeMounts:
+            - mountPath: /workspace/leaderboard
+              name: leaderboard
+            - mountPath: /workspace/scenario_runner
+              name: scenario-runner
+            - mountPath: /workspace/CARLA
+              name: carla-python-api
+            - mountPath: /tmp/agent
+              name: logs
+              subPath: agent4
+            - mountPath: /tmp/status
+              name: logs
+              subPath: containers-status
 
         # Log copy container
         - name: logcopy
@@ -320,7 +298,7 @@ spec:
             - name: S3_BUCKET
               value: "beta-leaderboard-10"
             - name: SUBMISSION_ID
-              value: test-carla-benchmark-job
+              value: test-carla-benchmark-job-1
           volumeMounts:
             - mountPath: /logs
               name: logs
@@ -339,5 +317,3 @@ spec:
           emptyDir: {}
         - name: logs
           emptyDir: {}
-
-  backoffLimit: 8
