--- a/leaderboard_2.0/docker/logcopy/Dockerfile
+++ b/leaderboard_2.0/docker/logcopy/Dockerfile
@@ -10,7 +10,8 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 
 RUN pip3 install \
     requests \
-    dictor
+    dictor \
+    jq
 
 COPY run_logcopy.sh /workspace/run_logcopy.sh
 
