--- a/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
+++ b/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
@@ -24,6 +24,7 @@ spec:
               mkdir -m 0777 -p /tmp/logs/agent{1..4}
               mkdir -m 0777 -p /tmp/logs/simulator
               mkdir -m 0777 -p /tmp/logs/containers-status
+              mkdir -m 0777 -p /tmp/logs/evalai
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
