Added resume detection adn evalai files

--- a/leaderboard_2.0/docker/logcopy/Dockerfile
+++ b/leaderboard_2.0/docker/logcopy/Dockerfile
@@ -17,5 +17,7 @@ RUN pip3 install \
     dictor
 
 COPY run_logcopy.sh /workspace/run_logcopy.sh
+COPY run_logcopy.sh /workspace/evalai/generate_results.py
+COPY run_logcopy.sh /workspace/evalai/generate_stdout.py
 
 CMD ["/bin/bash"]
