Fixed challenge id env variable

--- a/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
+++ b/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
@@ -312,7 +312,7 @@ spec:
             - name: S3_BUCKET
               value: "beta-leaderboard-20"
             - name: CHALLENGE_ID
-              value$: $.challenge_id
+              value.$: $.challenge_id
             - name: TEAM_ID
               value.$: $.team_id
             - name: SUBMISSION_ID
