--- a/leaderboard_2.0/docker/logcopy/Dockerfile
+++ b/leaderboard_2.0/docker/logcopy/Dockerfile
@@ -17,7 +17,8 @@ RUN pip3 install \
     dictor
 
 COPY run_logcopy.sh /workspace/run_logcopy.sh
-COPY run_logcopy.sh /workspace/evalai/generate_results.py
-COPY run_logcopy.sh /workspace/evalai/generate_stdout.py
+COPY evalai/generate_results.py /workspace/evalai/generate_results.py
+COPY evalai/generate_stdout.py /workspace/evalai/generate_stdout.py
+COPY evalai/generate_metadata.py /workspace/evalai/generate_metadata.py
 
 CMD ["/bin/bash"]
