--- a/leaderboard_2.0/config/fluentd.yaml
+++ b/leaderboard_2.0/config/fluentd.yaml
@@ -11,8 +11,7 @@ data:
     <source>
       @type tail
       @id in_tail_container_logs
-      path /var/log/containers/*simulator*.log, /var/log/containers/*agent*.log
-      # exclude_path "/var/log/containers/fluent*"
+      path /var/log/containers/*simulator*.log, /var/log/containers/*agent*.log, /var/log/containers/*logcopy*.log
       pos_file "/var/log/fluentd-containers.log.pos"
       tag "kubernetes.*"
       read_from_head true
