--- a/leaderboard_2.0/config/leaderboard-cluster.yaml
+++ b/leaderboard_2.0/config/leaderboard-cluster.yaml
@@ -56,10 +56,16 @@ iam:
         # Based on AWSS3FullAccess, grant read + write access to S3“
         - "s3:*"
         - "s3-object-lambda:*"
+        # DynamoDB
+        - "dynamodb:GetItem",
+        - "dynamodb:DeleteItem",
+        - "dynamodb:PutItem",
+        - "dynamodb:UpdateItem"
         Resource:
         # All ECR repositories and a specific S3 bucket
         - "arn:aws:ecr:*:342236305043:repository/*"
         - "arn:aws:s3:::beta-leaderboard-20*"
+        - "arn:aws:dynamodb:*:342236305043:table/beta-leaderboard-20"
 
 nodeGroups:
   - name: basic-worker
