--- a/leaderboard_1.0/docker/logcopy/Dockerfile
+++ b/leaderboard_1.0/docker/logcopy/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.7
 
 WORKDIR /workspace
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends jq \
+    && rm -rf /var/lib/apt/lists/* 
+
 # Install aws cli v2
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
     && unzip awscliv2.zip \
@@ -13,5 +17,8 @@ RUN pip3 install \
     dictor
 
 COPY run_logcopy.sh /workspace/run_logcopy.sh
+COPY evalai/generate_results.py /workspace/evalai/generate_results.py
+COPY evalai/generate_stdout.py /workspace/evalai/generate_stdout.py
+COPY evalai/generate_metadata.py /workspace/evalai/generate_metadata.py
 
 CMD ["/bin/bash"]
