--- a/leaderboard_1.0/jobs/carla-benchmark-job.yaml
+++ b/leaderboard_1.0/jobs/carla-benchmark-job.yaml
@@ -4,7 +4,6 @@ metadata:
   name: submission-parallel
 spec:
   backoffLimit: 8
-  ttlSecondsAfterFinished: 10
   template:
     spec:
       serviceAccountName: submission-worker
@@ -21,9 +20,23 @@ spec:
               cp -r ${SCENARIO_RUNNER_ROOT}/* /tmp/scenario_runner/
               cp -r ${CARLA_PYTHON_API_ROOT}/* /tmp/CARLA/
 
-              mkdir -m 0777 -p /tmp/logs/agent{1..4}
-              mkdir -m 0777 -p /tmp/logs/simulator
-              mkdir -m 0777 -p /tmp/logs/containers-status
+              if [ -z $RESUME ]; then
+                echo "Detected a normal run, creating log files"
+                mkdir -m 0777 -p /tmp/logs/agent/agent{1..4}
+                mkdir -m 0777 -p /tmp/logs/simulator
+                mkdir -m 0777 -p /tmp/logs/containers-status
+                mkdir -m 0777 -p /tmp/logs/evalai
+              else
+                echo "Detected a resume, download log files from S3"
+                aws s3 sync s3://${S3_BUCKET}/${SUBMISSION_ID} /tmp/logs
+              fi
+          env:
+            - name: RESUME
+              value: ""
+            - name: S3_BUCKET
+              value: beta-leaderboard-10
+            - name: SUBMISSION_ID
+              value: leaderboard-10-submission-id
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
@@ -93,7 +106,7 @@ spec:
               name: carla-python-api
             - mountPath: /tmp/agent
               name: logs
-              subPath: agent1
+              subPath: agent/agent1
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
@@ -156,7 +169,7 @@ spec:
               name: carla-python-api
             - mountPath: /tmp/agent
               name: logs
-              subPath: agent2
+              subPath: agent/agent2
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
@@ -219,7 +232,7 @@ spec:
               name: carla-python-api
             - mountPath: /tmp/agent
               name: logs
-              subPath: agent3
+              subPath: agent/agent3
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
@@ -282,7 +295,7 @@ spec:
               name: carla-python-api
             - mountPath: /tmp/agent
               name: logs
-              subPath: agent4
+              subPath: agent/agent4
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
@@ -297,8 +310,14 @@ spec:
           env:
             - name: S3_BUCKET
               value: "beta-leaderboard-10"
+            - name: CHALLENGE_ID
+              value.$: "768"
+            - name: TEAM_ID
+              value.$: "271"
             - name: SUBMISSION_ID
-              value: leaderboard-10-submission-id
+              value.$: "leaderboard-10-submission-id"
+            - name: TRACK_ID
+              value.$: "2118"
           volumeMounts:
             - mountPath: /logs
               name: logs
