--- a/leaderboard_2.0/jobs/carla-benchmark-job.yaml
+++ b/leaderboard_2.0/jobs/carla-benchmark-job.yaml
@@ -22,17 +22,21 @@ spec:
 
               if [ -z $RESUME ]; then
                 echo "Detected a normal run, creating log files"
-                mkdir -m 0777 -p logs/agent/agent{1..4}
-                mkdir -m 0777 -p logs/simulator
-                mkdir -m 0777 -p logs/containers-status
-                mkdir -m 0777 -p logs/evalai
+                mkdir -m 0777 -p /tmp/logs/agent/agent{1..4}
+                mkdir -m 0777 -p /tmp/logs/simulator
+                mkdir -m 0777 -p /tmp/logs/containers-status
+                mkdir -m 0777 -p /tmp/logs/evalai
               else
                 echo "Detected a resume, download log files from S3"
-                aws s3 sync s3://${S3_BUCKET}/${SUBMISSION_ID} logs
+                aws s3 sync s3://${S3_BUCKET}/${SUBMISSION_ID} /tmp/logs
               fi
           env:
             - name: RESUME
               value: ""
+            - name: S3_BUCKET
+              value: "beta-leaderboard-20"
+            - name: SUBMISSION_ID
+              value: "0"
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
@@ -142,7 +146,7 @@ spec:
           command: ["/bin/bash", "-c"]
           args:
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh 
+              bash /workspace/leaderboard/run_leaderboard.sh
           env:
             - name: CARLA_PORT
               value: "2100"
@@ -207,7 +211,7 @@ spec:
           command: ["/bin/bash", "-c"]
           args:
             - |
-              bash /workspace/leaderboard/run_leaderboard.sh 
+              bash /workspace/leaderboard/run_leaderboard.sh
           env:
             - name: CARLA_PORT
               value: "2200"
@@ -314,8 +318,14 @@ spec:
           env:
             - name: S3_BUCKET
               value: "beta-leaderboard-20"
+            - name: CHALLENGE_ID
+              value.$: "768"
+            - name: TEAM_ID
+              value.$: "271"
             - name: SUBMISSION_ID
-              value: "0"
+              value.$: "0"
+            - name: TRACK_ID
+              value.$: "2118"
           volumeMounts:
             - mountPath: /logs
               name: logs
